# Greenhouse

./: pyproject.toml
src/greenhouse/: config.py
src/greenhouse/models/: genome.py  plant.py
src/greenhouse/models/plant_parts/: __init__.py  branch.py  directional_plant_part.py  flower.py  leaf.py  plant_part.py  root.py  seed.py
